// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toolbar/Section can be aligned 1`] = `
<section
  className="mdc-toolbar__section mdc-toolbar__section--align-start"
/>
`;

exports[`toolbar/Section can be return as a range object. 1`] = `
<section
  className="mdc-toolbar__section mdc-toolbar__section--shrink-to-fit"
/>
`;

exports[`toolbar/Section can render children 1`] = `
<section
  className="mdc-toolbar__section"
>
  Children are here!
</section>
`;
